Echo bot working

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,13 @@
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>1.4.14</version>
+		</dependency>				
+
+		<dependency>
+			<groupId>org.telegram</groupId>
+			<artifactId>telegrambots</artifactId>
+			<version>6.9.7.1</version>
 		</dependency>
+	
 	</dependencies>
 </project>
