Coordinates work sending images

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
 	<name>Telegram Bot</name>
 	<description>A POC with Telegram Bot</description>
 
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
+
 	<dependencies>
 		<!-- SLF4J API -->
 		<dependency>
@@ -28,6 +33,13 @@
 			<artifactId>telegrambots</artifactId>
 			<version>6.9.7.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>4.25.0</version>
+		</dependency>
+
 	
 	</dependencies>
 	
