--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
 			<version>4.25.0</version>
 		</dependency>
 
+<dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.11.0</version>
+</dependency>
 	
 	</dependencies>
 	
